2008-05-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for <noframes> in <head> (HTML5 revision
	1692).

2008-05-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: The secondary insertion mode used when switching
	to foreign content is the "in body" insertion mode (HTML5 revision
	1696).

2008-05-25  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Don't raise parse error for <isindex/> (HTML5
	revision 1697).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for end-of-file token in foreign content
	insertion mode (HTML5 revision 1693).  Update SVG camelCase
	attribute list (HTML5 revision 1700).  <textarea> closes
	</select> (HTML5 revision 1699).  More start tags close in
	foreign content insertion mode (HTML5 revision 1698).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: ";" is not part of charset name (HTML5 revision 1665).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: More robust charset parameter detection (HTML5
	revision 1674).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* ContentType.pm: Support for image/vnd.microsoft.icon (HTML5
	revision 1676).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Ignore language part of public identifiers for
	quriks mode detection (HTML5 revision 1679).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Reduce the number of errors in truncated doctypes (HTML5
	revision 1685).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for EOF in new states for tags (HTML5
	revision 1684).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_reset_insertion_mode): Make <td>.innerHTML
	work (HTML5 revision 1690).

2008-05-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_main): Change handling of
	end tags in head insertion modes (HTML5 revision 1686).
	(parse_char_string): Bug fix for non-utf8 character string handlings.
	(parse_char_stream): |ungetc| does not work well for this context.
