@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.148 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.149 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 use Error qw(:try);
 
 ## ISSUE:
@@ -481,7 +481,8 @@ sub parse_byte_stream ($$$$;$) {
       ## "Change the encoding" algorithm:
 
       ## Step 1    
-      if ($charset->{iana_names}->{'utf-16'}) { ## ISSUE: UTF-16BE -> UTF-8? UTF-16LE -> UTF-8?
+      if ($charset->{category} &
+          Message::Charset::Info::CHARSET_CATEGORY_UTF16 ()) {
         $charset = Message::Charset::Info->get_by_iana_name ('utf-8');
         ($char_stream, $e_status) = $charset->get_decode_handle
             ($byte_stream,
@@ -7475,4 +7476,4 @@ package Whatpm::HTML::RestartParser;
 push our @ISA, 'Error';
 
 1;
-# $Date: 2008/05/25 07:54:33 $
+# $Date: 2008/05/25 08:53:49 $
