@@ -1,7 +1,7 @@
 1..2192
 # Running under perl version 5.008007 for linux
-# Current time local: Sun May 25 17:35:07 2008
-# Current time GMT:   Sun May 25 08:35:07 2008
+# Current time local: Sun May 25 17:47:05 2008
+# Current time GMT:   Sun May 25 08:47:05 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
