@@ -1,7 +1,7 @@
 1..2040
 # Running under perl version 5.008007 for linux
-# Current time local: Sun May 25 17:34:42 2008
-# Current time GMT:   Sun May 25 08:34:42 2008
+# Current time local: Sun May 25 17:46:14 2008
+# Current time GMT:   Sun May 25 08:46:14 2008
 # Using Test.pm version 1.25
 ok 1
 ok 2
