@@ -1,7 +1,7 @@
 1..1073
 # Running under perl version 5.008007 for linux
-# Current time local: Sun May 25 17:34:43 2008
-# Current time GMT:   Sun May 25 08:34:43 2008
+# Current time local: Sun May 25 17:46:15 2008
+# Current time GMT:   Sun May 25 08:46:15 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
