@@ -1,7 +1,7 @@
 1..1920
 # Running under perl version 5.008007 for linux
-# Current time local: Sun May 25 17:34:52 2008
-# Current time GMT:   Sun May 25 08:34:52 2008
+# Current time local: Sun May 25 17:46:35 2008
+# Current time GMT:   Sun May 25 08:46:35 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
