@@ -1,5 +1,10 @@
 2008-05-25  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentType.t: Test result related to UTF-32 updated (HTML5
+	revision 1701).
+
+2008-05-25  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-2.dat: Test data on sizes="" are added (HTML5
 	revision 1558).
 
