@@ -1,5 +1,12 @@
 2008-05-25  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentType.pm: Drop support for UTF-32 (HTML5 revision 1701).
+
+	* HTML.pm.src: UTF-16BE and UTF-16LE should be considered 
+	as UTF-16 (HTML5 revision 1701).
+
+2008-05-25  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: Support for <noframes> in <head> (HTML5 revision
 	1692).
 
